<resources>
    <string name="app_name">p1lalv</string>
    <string name="Titulo1">TECNOLÓGICO DE ESTUDIOS SUPERIORES DEL ORIENTE DEL ETADO DE MEXICO</string>
    <string name="Titulo2">INGENIERIA EN SISTEMAS COMPUTACIONALES</string>
    <string name="Titulo3">INTRODUCCION A APLICACIONES MOVILES</string>
    <string name="Titulo4">PROGRAMANDO MOVILES</string>
    <string name="Titulo5">LUIS ALBERTO LÓPEZ VALDIVIEZO</string>
    <string name="Titulo6">7S11</string>
    <string name="Titulo7">166010014</string>
    <string name="ima">teso</string>
</resources>
